--- a/src/app/shared/alert/alert.component.html
+++ b/src/app/shared/alert/alert.component.html
@@ -1,7 +1,7 @@
-  <div class="backdrop"></div>
+  <div class="backdrop" (click)="onClose()"></div>
   <div class="alert-box">
     <p>{{ message }}</p>
     <div class="alert-box-actions">
-      <button class="btn btn-primary">Close</button>
+      <button class="btn btn-primary" (click)="onClick()">Close</button>
     </div>
   </div>
