--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -3,6 +3,7 @@
 <!--    <div class="alert alert-danger" *ngIf="error">-->
 <!--      <p>{{ error }}</p>-->
 <!--    </div>-->
+    <div #addHere></div>
     <app-alert
       [message]="error"
       *ngIf="error"
