--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+  <ng-template appPlaceholder></ng-template><div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
 <!--    <div class="alert alert-danger" *ngIf="error">-->
 <!--      <p>{{ error }}</p>-->
@@ -8,7 +8,6 @@
 <!--      *ngIf="error"-->
 <!--      (close)="onHandleError()"-->
 <!--    ></app-alert>-->
-    <div #addHere></div>
     <div *ngIf="isLoading" style="text-align: center;">
       <app-loading-spinner></app-loading-spinner>
     </div>
